# daps_2023

./: CMakeLists.txt  README.md
lab10/: howto.txt  out.txt  upc-1-matmul.c
lab10/a.out_pthread-link/: Makefile  upc-1-matmul_obj.c
lab11/: gaspi-0-hello  gaspi-0-hello.c  gaspi-3-round-robin  gaspi-3-round-robin.c  howto_gaspi.txt  howto_xmp.txt
lab2/: hellompi.c  mpi_test_time.c
lab3/: pi_integral_intro.c
lab4/: pi_max_demo.c  pi_server_demo.c
lab5/A/: sprng_mpi.cpp
lab5/B/: sprng_2streams_mpi.cpp
lab5/D/: sprng_message_mpi.cpp
lab5/E/: mpi_pi_sprng.cpp
lab6/: mpe_pi_X11.c
lab7/A/: pi_sequential.c
lab7/B/: pi_table.c
lab7/C/: pi_critical.c
lab7/D/: pi_reduction.c
lab7/E/: pi_tasks.c
lab8/: mc_pi_leak.c  mc_pi_mpe.c  mc_pi_mpe_framework.c  mc_pi_serv.c
lab9/: howto_cuda.txt  howto_mpi_cuda.txt  howto_openmp_cuda.txt
lab9/A/: pi_omp4_gpu.c
lab9/B/: stencil2d_mpi_omp4_gpu.c
lab9/C/: saxpy_omp4_framework.c
lab9/lib/: Common
